@@ -29,6 +29,8 @@ Version 6
 
 --Fixed enemy health bar rounding jitter at high max health levels.
 
+--Fixed more bugs in tutorial rigging.
+
 
 
 
